# tiny3d

./: .gitignore  CMakeLists.txt  app.icns  iconwriter.c  res.rc  shaders.metallib  tiny3d  tiny3d.c  tiny3d.h
include/: base.h  bmf.h  fast_obj.h  image.h  linmath.h  perlin_noise.h  platform.h  tiny3d.h  tinymath.h
res/models/: banana.bmf  cube.blend  cube.blend1  cube.bmf  cube3.mtl
src/: base.c  bmf.c  fast_obj.c  game.c  image.c  linmath.c  main.c  perlin_noise.c  platform.c  tiny3d.c  tiny3d.h  tinymath.c
src/platform/: linux.c  mac.m  macos.m  shaders.air  shaders.metal  unix.c  windows.c
tiny3d.app/Contents/: Info.plist
tiny3d.app/Contents/MacOS/: tiny3d
tools/blender_scripts/: fmf.py
